# Text2Diagram

./: LICENSE  README.md
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  gunicorn_config.py  main.py  pyproject.toml  run.sh  start.py
backend/app/model/: diagram.py
backend/app/router/: LLM.py
backend/app/service/: LLM.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx  PromptInput.tsx  Result.tsx
frontend/src/pages/gallery/: data.ts  index.tsx
frontend/src/pages/gallery/components/: Diagram.tsx
frontend/src/pages/generate/: index.tsx
frontend/src/pages/generate/components/: PromptInput.tsx  Result.tsx
frontend/src/services/: api.ts
frontend/src/store/: apiSlice.ts  store.ts
frontend/src/types/: index.ts
